# liquid-ghc-prim

./: README.md  liquid-ghc-prim.cabal
src/GHC/: Prim.hsig  Types.hsig
