name:                liquid-ghc-prim
version:             0.4.0.0
synopsis:            LiquidHaskell specifications for the `ghc-prim` package
homepage:            https://github.com/spinda/liquid-ghc-prim
license:             BSD3
license-file:        LICENSE
author:              Michael Smith
maintainer:          michael@diglumi.com
category:            LiquidHaskell
build-type:          Custom
cabal-version:       >=1.10

library
  exposed:             False
  exposed-modules:     Liquid.GHC.Prim,
                       Liquid.GHC.Types
  build-depends:       base >=4.8 && <4.9,
                       ghc-prim >=0.4 && <0.5,
                       liquidhaskell
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -fplugin=LiquidHaskell.Plugin
                       -fplugin-opt=LiquidHaskell.Plugin:no-ghc-prim-specs,no-base-specs

custom-setup
  setup-depends:       base, Cabal, liquidhaskell

